fix visual clipping of '.projects > *' when swapping

--- a/src/styles.css
+++ b/src/styles.css
@@ -104,7 +104,6 @@ body * {
 
 .projects > * {
   border-radius: 4px 4px 12px 12px;
-  overflow: hidden;
 }
 
 .projects > .add-project {
